--- a/insta/src/App.css
+++ b/insta/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .App-logo {
@@ -28,5 +30,11 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 500px){
+  .App {
+    width: 95%;
   }
 }
